Implemented heap optimization

--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -7,6 +7,7 @@ LDFLAGS=-lpthread
 all:
 	$(CC) $(CFLAGS) benchmark_no_sharing.c -o benchmark_no_sharing $(LDFLAGS)
 	$(CC) $(CFLAGS) benchmark_false_sharing.c -o benchmark_false_sharing $(LDFLAGS)
+	$(CC) $(CFLAGS) benchmark_malloc.c -o benchmark_malloc $(LDFLAGS)
 	$(CPP) $(CPPFLAGS) inc.cpp annotation.cpp -o inc $(LDFLAGS)
 clean:
 	rm -f benchmark_no_sharing benchmark_false_sharing inc
